[gd_scene load_steps=2 format=3 uid="uid://cslby72tp46ig"]

[ext_resource type="Script" path="res://debug_switch.gd" id="1_7hfja"]

[node name="DebugSwitch" type="HBoxContainer"]
offset_right = 106.0
offset_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource("1_7hfja")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Switch" type="CheckButton" parent="."]
layout_mode = 2
size_flags_horizontal = 10
disabled = true

[connection signal="button_up" from="Switch" to="." method="_on_switch_button_up"]
[connection signal="pressed" from="Switch" to="." method="_on_switch_pressed"]
[connection signal="toggled" from="Switch" to="." method="_on_switch_toggled"]
